<resources>
    <string name="app_name">Encount</string>
    <string name="userPost">投稿</string>
    <string name="userFollow">フレンド</string>
    <string name="userStar">いいね</string>
    <string name="userCngProf">プロフィール変更</string>
    <string name="userLogin">ログイン</string>
    <string name="userAlready">アカウントを持っている方はこちら</string>
    <string name="userLoginMail">メールアドレス</string>
    <string name="userName">ユーザー名</string>
    <string name="userAtName">ユーザー名</string>
    <string name="userLoginPass">パスワード</string>
    <string name="reUserLoginPass">パスワード(確認)</string>
    <string name="userLoginNew">新規登録</string>
    <string name="userPassForgot">パスワードを忘れた</string>
    <string name="menuUser">ユーザー</string>
    <string name="menuHome">ホーム</string>
    <string name="menuMap">マップ</string>
    <string name="Search">検索</string>
    <string name="SearchAccount">アカウントを探す</string>
    <string name="menuSettings">設定</string>
    <!--投稿画面で使用　ここから-->
    <string name="userPostCamera">タップして写真を撮影</string>
    <string name="userPostButton">投稿</string>
    <string name="userPostComment">コメントを入力</string>
    <string name="tv_current_title">現在地</string>
    <string name="tv_latitude_title">緯度:</string>
    <string name="tv_longitude_title">経度:</string>

    <!--投稿画面で使用　こまで-->
    <string name="bt_map_current">地図表示</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="nav_open">Navigation Drawer Open</string>
    <string name="nav_close">Navigation Drawer Close</string>

    <!--スポット詳細画面で使用　ここから-->
    <string name="spot_name">鎌ヶ谷情報ビジネス専門学校（スポット名）</string>
    <string name="spot_code">千葉県鎌ヶ谷市新鎌ヶ谷0-00-00（住所）</string>
    <string name="spot_popular">人気</string>
    <string name="spot_new">新着</string>
    <string name="description">写真の説明</string>
    <!--スポット詳細画面で使用　ここまで-->


</resources>
