<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.encount.UserSingin">

    <TextView
        android:id="@+id/SinginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#898989"
        android:text="@string/userLoginNew"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@+id/SinginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#dcdcdc"
        android:drawableLeft="@drawable/ic_action_person"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/usermail"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#dcdcdc"
        android:drawableLeft="@drawable/ic_action_mail"
        android:ems="10"
        android:hint="@string/userLoginMail"
        android:inputType="textEmailAddress"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/userpass"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@+id/usermail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#dcdcdc"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/userLoginPass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reuserpass"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@+id/userpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#dcdcdc"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/reUserLoginPass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="15sp"
        android:layout_above="@+id/singinbtn"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/singinProgress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_above="@+id/singinbtn"
        android:indeterminateTint="#00bde7"
        android:layout_marginBottom="10dp"
        tools:visibility="visible"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/singinbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/userlogin"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#00bde7"
        app:cardCornerRadius="25dp"
        android:layout_marginBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/userLoginNew"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAlready"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
