<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/SinginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#898989"
        android:text="@string/SearchAccount"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etUserMail"
        android:layout_width="match_parent"
        android:layout_marginEnd="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/SinginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_design"
        android:drawableLeft="@drawable/edit_text_mail"
        android:ems="10"
        android:hint="@string/userLoginMail"
        android:inputType="text"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="15sp"
        android:layout_above="@+id/btnSearch"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/Progress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_above="@+id/btnSearch"
        android:indeterminateTint="#00bde7"
        android:layout_marginBottom="10dp"
        tools:visibility="visible"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSearch"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#00bde7"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/logintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Search"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
