<?xml version="1.0" encoding="utf-8"?>
<!--
『Androidアプリ開発の教科書』
第15章
カメラアプリ連携サンプル

画面定義ファイル。

@author Shinzo SAITO

ファイル名=activity_use_camera.xml
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#87ceeb"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:text="タップして写真を撮影"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:layout_gravity="center"
        android:onClick="onCameraImageClick"
        android:scaleType="fitCenter"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tv_current_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tv_latitude_title" />

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tv_longitude_title" />

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1" />

        <!--android:onClick="onMapShowCurrentButtonClick"-->


    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">-->

    <!--投稿コメント用テキストボックス-->
    <EditText
        android:id="@+id/commentInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:gravity="top|left"
        android:hint="コメントを入力"
        android:maxLength="200"
        android:inputType="text"
        android:background="@drawable/partsdesign2"
        />

    <!--投稿タグ用テキストボックス-->
    <!--
    <EditText
        android:id="@+id/tagInput"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:gravity="top|left"
        android:hint="タグを入力"
        android:maxLength="50"
        android:inputType="text"
        android:background="@drawable/partsdesign2"
        />
        -->

    <!--ファイル名確認用-->

    <!--投稿用ボタン-->
    <!--
    <Button
        android:id="@+id/postUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/partsdesign"
        android:text="投稿"
        android:visibility="visible" />-->
    <!--android:onClick="onMapShowCurrentButtonClick"
    android:text="@string/bt_map_current"/>-->

    <!--</LinearLayout>-->

    <TextView
        android:id="@+id/tvWeatherDesc"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:textSize="15sp" />
    <!--
    <Button
        android:id="@+id/getButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="GET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="86dp" />-->

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="投稿(POST)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

</LinearLayout>